# kernel

./: .gitignore  CODING_STYLE.md  Makefile  Oryx.Kernel  README.md  kernel.elf  kernel.txt  meson.build  oryx.kernel
Source/: Kernel.cpp  Kernel.d  Link.ld  kernel.cxx
Source/Arch/Amd64/Drivers/Display/: VGA.cpp  VGA.cxx  VGA.d  VGA.hpp  VGA.hxx
Source/Common/: Buffer.cpp  Buffer.hpp  Console.cpp  Console.hpp  Console.hxx  Mem.cxx  Mem.hxx  Stivale2.hxx  Types.hxx
Source/HAL/Impls/Amd64/: Buffer.cpp  Text.cpp
Source/HAL/Interface/: Buffer.hpp  Text.hpp
Source/Init/: Init.cpp
Source/Init/Entry/: Amd64.asm
Source/Libraries/: Stivale2.hxx  Types.hxx
Source/Libs/: Stivale2.hpp
source/: header.asm  main.d  shell.d  syscalls.d  userspace.asm
source/arch/acpi/: madt.d  package.d
source/arch/amd64/: apic.d  cpu.d  gdt.d  handlers.asm  idt.d  memory.d  package.d  pic.d  port.d  syscall.asm  text.d  tss.d  userspace.asm
source/arch/amd64/drivers/legacy/: keyboard.d
source/arch/amd64/idt/: exeptions.d  package.d
source/arch/amd64/memory/: gdt.d  out.txt  package.d  phyiscal.d  physical.d  virtual.d
source/common/: memory.d
source/common/memory/: heap.d  map.d  package.d  physical.d
source/common/memory/alloc/: bitslab.d  block.d  package.d
source/common/scheduler/: package.d
source/io/: console.d  framebuffer.d
source/io/framebuffer/: fancy.d  font.d  package.d
source/lib/: collections.d  elf.d  limine.d  stivale.d
source/lib/runtime/: _assert.d  memory.d
source/lib/std/: bitmap.d  heap.d  math.d  result.d  stdio.d  string.d
source/lib/std/runtime/: _assert.d  memory.d  panic.d
source/lib/util/: bitmap.d  console.d  heap.d  math.d  result.d  string.d  types.d
source/memory/: allocator.d  heap.d  map.d  package.d  physical.d
source/memory/alloc/: bitslab.d  package.d
source/runtime/: _assert.d  math.d  memory.d  panic.d  string.d
source/scheduler/: package.d  process.d  queue.d  thread.d
source/specs/: stivale.d
source/support/: memory.d  panic.d  string.d
source/support/specs/: stivale.d
